fabric/support/test/tests/noble_ui/genesis_default_not_satisfied.stderr
error[E0277]: the trait bound `noble::GenesisConfig: std::default::Default` is not satisfied
    --> $DIR/genesis_default_not_satisfied.rs:22:18
     |
22   |     impl<T: Config> GenesisBuild<T> for GenesisConfig {}
     |                     ^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `noble::GenesisConfig`
     |
    ::: $WORKSPACE/fabric/support/src/traits.rs
     |
     | pub trait GenesisBuild<T, I=()>: Default + MaybeSerializeDeserialize {
     |                                  ------- required by this bound in `GenesisBuild`
